--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
   </head>
   <body>
 
+    <!-- HEADER -->
+    <class="header">
+
+    <div id="headerimage">
+        <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-tea-cozy-logo.png">
+    </div>
+
+    <div id="headernav">
+      <a href="">Mission</a>
+        <a href="">Featured Tea</a>
+          <a href="">Locations</a>
+    </div>
+
+</class>
+
   </body>
 </html>
