add mission section

--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
   <body>
 
     <!-- HEADER -->
-    <class="header">
+  <div class="header">
+      <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-tea-cozy-logo.png">
+         <nav>
+            <a href="">Mission</a>
+            <a href="">Featured Tea</a>
+            <a href="">Locations</a>
+        </nav>
+  </div>
 
-    <div id="headerimage">
-        <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-tea-cozy-logo.png">
-    </div>
+<!-- MISSION -->
 
-    <div id="headernav">
-      <a href="">Mission</a>
-        <a href="">Featured Tea</a>
-          <a href="">Locations</a>
-    </div>
+<div class="mission">
+   <div class="headers">
+     <h2>Our Mission</h2>
+     <h4> Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea.</h4>
+  </div>
+</div>
 
-</class>
 
   </body>
 </html>
