--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
 
     <!-- HEADER -->
+
   <div class="header">
       <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-tea-cozy-logo.png">
          <nav>
@@ -25,6 +26,8 @@
      <h4> Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea.</h4>
   </div>
 </div>
+
+<!-- TEA OF THE MONTH -->
 
 
   </body>
