add teas -- having trouble centering.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,46 @@
 
 <!-- TEA OF THE MONTH -->
 
+<div class="teas">
+  <h2>Tea of the Month</h2>
+    <h4>What's Steeping at The Tea Cozy?</h4>
+
+        <div class="images">
+
+           <div class="berryblitz">
+              <img  src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-berryblitz.jpg">
+                <p>Fall Berry Blitz Tea</p>
+          </div>
+
+           <div class="spicedrum">
+              <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-spiced-rum.jpg">
+                <p>Spiced Rum Tea</p>
+          </div>
+
+          <div class="donuts">
+              <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-donut.jpg">
+                <p>Seasonal Donuts</p>
+          </div>
+
+          <div class="myrtle">
+              <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-myrtle-ave.jpg">
+                <p>Myrtle Ave Tea</p>
+          </div>
+
+          <div class="bedfordbizarre">
+              <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-bedford-bizarre.jpg">
+                <p>Bedford Bizarre Tea</p>
+          </div>
+          
+
+        </div>
+    </div>
+
+
+
+
+
+
 
   </body>
 </html>
