--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tea Cozy</title>
   </head>
   <body>
-
+<center>
     <!-- HEADER -->
 
   <div class="header">
@@ -59,7 +59,7 @@
               <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-bedford-bizarre.jpg">
                 <p>Bedford Bizarre Tea</p>
           </div>
-          
+
 
         </div>
     </div>
@@ -69,6 +69,6 @@
 
 
 
-
+</center>
   </body>
 </html>
