--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
 <center>
-    <!-- HEADER -->
 
+
+    <!-- HEADER -->
   <div class="header">
       <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-tea-cozy-logo.png">
          <nav>
@@ -19,7 +20,6 @@
   </div>
 
 <!-- MISSION -->
-
 <div class="mission">
    <div class="headers">
      <h2>Our Mission</h2>
@@ -28,7 +28,6 @@
 </div>
 
 <!-- TEA OF THE MONTH -->
-
 <div class="teas">
   <h2>Tea of the Month</h2>
     <h4>What's Steeping at The Tea Cozy?</h4>
@@ -58,13 +57,42 @@
           <div class="bedfordbizarre">
               <img src="C:\Users\Elizabeth\Documents\Projects\TeaCozy\resources\images\img-bedford-bizarre.jpg">
                 <p>Bedford Bizarre Tea</p>
-          </div>
-
-
-        </div>
+         </div>
+    </div>
     </div>
 
 
+    <!-- LOCATIONS -->
+    <div class="locations">
+
+
+  <!-- DOWNTOWN - FIRST BOX -->
+    <div class="boxes">
+      <h3>Downtown</h3>
+        <p>384 West 4th St</p>
+        <p>Suite 108</p>
+        <p>Portland, Maine</p>
+    </div>
+
+  <!-- EAST BAYSIDE - MIDDLE BOX  -->
+    <div class="boxes">
+      <h3>East Bayside</h3>
+        <p>3433 Phisherman's Avenue</p>
+        <p>(Northwest Corner)</p>
+        <p>Portland, Maine</p>
+    </div>
+
+  <!-- OAKDALE - LAST BOX  -->
+    <div class="boxes">
+      <h3>Oakdale</h3>
+        <p>515 Crescent Avenue</p>
+        <p>Second Floor</p>
+        <p>Portland, Maine</p>
+    </div>
+  </div>
+
+
+  </div>
 
 
 
