--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
     <!-- LOCATIONS -->
     <div class="locations">
+      <h2> Locations </h2>
 
 
   <!-- DOWNTOWN - FIRST BOX -->
@@ -89,10 +90,21 @@
         <p>Second Floor</p>
         <p>Portland, Maine</p>
     </div>
+
+  </div>
   </div>
 
 
-  </div>
+<!-- FOOTER -->
+<div class="contact">
+<h2> The Tea Cozy </h2>
+<h5> contact@theteacozy.com</h5>
+<span>917-555-8904</span>
+</div>
+
+<div class="footer">
+<h5>Copyright The Tea Cozy 2017</h5>
+</div>
 
 
 
